Category now collapsing on smaller screens

--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicCategoryPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicCategoryPartial.cshtml
@@ -3,7 +3,34 @@
 *@
 @{
 }
-<div class="list-group-horizontal-md-2" style="font-family:cursive">
+<nav class="navbar-expand-sm border-bottom navbar-dark mb-3">
+    <div class="container">
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#categoryNav" aria-controls="categoryNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="categoryNav">
+            <div class="list-group-horizontal-md-2" style="font-family:cursive">
+                <a href="/Vicove/Blondinki" class="list-group-item list-group-item-action blueBtn">Блондинки</a>
+                <a href="/Vicove/BaiGanio" class="list-group-item list-group-item-action blueBtn">Бай Ганьо</a>
+                <a href="/Vicove/Zhivotni" class="list-group-item list-group-item-action blueBtn">Животни</a>
+                <a href="/Vicove/IvanchoIMariika" class="list-group-item list-group-item-action blueBtn">Иванчо и Марийка</a>
+                <a href="/Vicove/Ludi" class="list-group-item list-group-item-action blueBtn">Луди</a>
+                <a href="/Vicove/Laforizmi" class="list-group-item list-group-item-action blueBtn">Лафоризми</a>
+                <a href="/Vicove/Mutri" class="list-group-item list-group-item-action blueBtn">Мутри</a>
+                <a href="/Vicove/Mrusni" class="list-group-item list-group-item-action blueBtn">Мръсни</a>
+                <a href="/Vicove/Policai" class="list-group-item list-group-item-action blueBtn">Полицаи</a>
+                <a href="/Vicove/Piqnici" class="list-group-item list-group-item-action blueBtn">Пияници</a>
+                <a href="/Vicove/RadioErevan" class="list-group-item list-group-item-action blueBtn">Радио Ереван</a>
+                <a href="/Vicove/Tupizmi" class="list-group-item list-group-item-action blueBtn">Tъпизми</a>
+                <a href="/Vicove/UchenicheskiBiseri" class="list-group-item list-group-item-action blueBtn">Ученически бисери</a>
+                <a href="/Vicove/CherenHumor" class="list-group-item list-group-item-action blueBtn">Черен хумор</a>
+                <a href="/Vicove/Medicinski" class="list-group-item list-group-item-action blueBtn">Медицински</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+@*<div class="list-group-horizontal-md-2" style="font-family:cursive">
     <a href="/Vicove/Blondinki" class="list-group-item list-group-item-action blueBtn">Блондинки</a>
     <a href="/Vicove/BaiGanio" class="list-group-item list-group-item-action blueBtn">Бай Ганьо</a>
     <a href="/Vicove/Zhivotni" class="list-group-item list-group-item-action blueBtn">Животни</a>
@@ -19,4 +46,4 @@
     <a href="/Vicove/UchenicheskiBiseri" class="list-group-item list-group-item-action blueBtn">Ученически бисери</a>
     <a href="/Vicove/CherenHumor" class="list-group-item list-group-item-action blueBtn">Черен хумор</a>
     <a href="/Vicove/Medicinski" class="list-group-item list-group-item-action blueBtn">Медицински</a>
-</div>
+</div>*@
